--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_VERIDA_TESTNET_DEFAULT_SERVER=https://db.testnet.verida.io:5002
+VUE_APP_VERIDA_TESTNET_DEFAULT_SERVER=https://dids.testnet.verida.io:5001
 VUE_APP_CONTEXT_NAME=Verida: Vault
