--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "core-js": "^3.6.5",
     "vee-validate": "^4.5.7",
     "vue": "^3.0.0",
+    "vue-clipboard3": "^1.0.1",
     "vue-router": "^4.0.0-0",
+    "vue-spinner": "^1.0.4",
     "vuex": "^4.0.0-0",
     "yup": "^0.32.11"
   },
