--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-VUE_APP_VERIDA_TESTNET_DEFAULT_SERVER=https://dids.testnet.verida.io:5001
-VUE_APP_CONTEXT_NAME=Verida: Vault
+VUE_APP_VERIDA_TESTNET_DEFAULT_DID_SERVER=https://dids.testnet.verida.io:5001
+VUE_APP_VAULT_CONTEXT_NAME=Verida: Vault
+VUE_APP_CONTEXT_NAME=Verida:Account Explorer
+VUE_APP_VERIDA_TESTNET_DEFAULT_SERVER =https://db.testnet.verida.io:5002/
+VUE_APP_LOGO_URL=https://assets.verida.io/verida_logo.svg
