--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@verida/account-web-vault": "^1.1.6",
     "@verida/client-ts": "^1.1.9",
     "core-js": "^3.6.5",
     "qrcode.vue": "^3.3.3",
@@ -17,10 +18,12 @@
     "vue-clipboard3": "^1.0.1",
     "vue-router": "^4.0.0-0",
     "vue-spinner": "^1.0.4",
+    "vue-toast-notification": "^2.0.1",
     "vuex": "^4.0.0-0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/events": "^3.0.0",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
