--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VUE_APP_VAULT_CONTEXT_NAME=Verida: Vault
 VUE_APP_CONTEXT_NAME=Verida:Account Explorer
 VUE_APP_VERIDA_TESTNET_DEFAULT_SERVER =https://db.testnet.verida.io:5002/
 VUE_APP_LOGO_URL=https://assets.verida.io/verida_logo.svg
+VUE_APP_BASE_URL=https://accounts.verida.io
