--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,11 @@
 
-# Basic set up for three package managers
+# Basic set up for npm
 
 version: 2
 updates:
 
-  # Maintain dependencies for yarn
-  - package-ecosystem: "yarn"
+  # Maintain dependencies for npm
+  - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "daily"
