--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
 		"test:unit": "vue-cli-service test:unit",
 		"lint": "vue-cli-service lint"
 	},
+	"resolutions": {
+		"acorn": "8.0.1"
+	},
 	"dependencies": {
 		"@verida/client-ts": "^1.1.12",
+		"@verida/verifiable-credentials": "^0.1.3",
 		"@verida/vue-account": "^0.1.19",
+		"buffer": "^6.0.3",
 		"core-js": "^3.21.0",
 		"qrcode.vue": "^3.3.3",
 		"vee-validate": "^4.5.7",
@@ -25,6 +30,7 @@
 	"devDependencies": {
 		"@types/events": "^3.0.0",
 		"@types/jest": "^27.4.0",
+		"@types/node": "^17.0.21",
 		"@typescript-eslint/eslint-plugin": "^4.18.0",
 		"@typescript-eslint/parser": "^4.18.0",
 		"@vue/cli-plugin-babel": "~4.5.0",
