--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"vue-router": "^4.0.0-0",
 		"vue-spinner": "^1.0.4",
 		"vue-toast-notification": "^3.0.0",
+		"vue-vc-display": "^1.0.2",
 		"vuex": "^4.0.0-0",
 		"yup": "^0.32.11"
 	},
