--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@verida/client-ts": "^1.1.12",
 		"@verida/verifiable-credentials": "^0.1.3",
 		"@verida/vue-account": "^0.1.19",
+		"@verida/vue-credentials-view": "^0.1.0",
 		"buffer": "^6.0.3",
 		"core-js": "^3.21.0",
 		"qrcode.vue": "^3.3.3",
@@ -24,7 +25,6 @@
 		"vue-router": "^4.0.0-0",
 		"vue-spinner": "^1.0.4",
 		"vue-toast-notification": "^3.0.0",
-		"vue-vc-display": "^1.0.2",
 		"vuex": "^4.0.0-0",
 		"yup": "^0.32.11"
 	},
