--- a/.env.sample
+++ b/.env.sample
@@ -5,4 +5,4 @@ VUE_APP_VERIDA_TESTNET_DEFAULT_SERVER =https://db.testnet.verida.io:5002/
 VUE_APP_LOGO_URL="https://assets.verida.io/verida_login_request_logo_170x170.png"
 VUE_APP_LOGIN_TEXT=Verida Account Explorer
 
-VUE_APP_BASE_URL=https://accounts.verida.io
+VUE_APP_BASE_URL=https://verida.network
