feat(reward-api): created axios api client and started implemneting reward api #113

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,5 @@ VUE_APP_LOGO_URL="https://assets.verida.io/verida_login_request_logo_170x170.png
 VUE_APP_LOGIN_TEXT=Verida Account Explorer
 
 VUE_APP_BASE_URL=https://accounts.verida.io
+
+VUE_APP_API_BASE_URL=https://rewardsserver.testnet.verida.io/latest
