--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@verida/verifiable-credentials": "^0.1.5",
 		"@verida/vue-account": "^0.1.29",
 		"@verida/vue-credentials-view": "^0.1.3",
+		"axios": "^0.27.2",
 		"buffer": "^6.0.3",
 		"core-js": "^3.21.0",
 		"dayjs": "^1.11.0",
