feat:changed  base url #113

--- a/.env.sample
+++ b/.env.sample
@@ -7,4 +7,6 @@ VUE_APP_LOGIN_TEXT=Verida Account Explorer
 
 VUE_APP_BASE_URL=https://accounts.verida.io
 
-VUE_APP_API_BASE_URL=https://rewardsserver.testnet.verida.io/latest
+VUE_APP_API_BASE_URL=https://obb1yjzibj.execute-api.us-east-1.amazonaws.com/latest
+
+
