--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@verida/client-ts": "^1.1.14",
+		"@verida/did-client": "^0.1.8",
 		"@verida/verifiable-credentials": "^0.1.5",
 		"@verida/vue-account": "^0.1.32",
 		"@verida/vue-credentials-view": "^0.1.3",
