fix:refactore config and constants

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,6 @@
-VUE_APP_VERIDA_TESTNET_DEFAULT_DID_SERVER=https://dids.testnet.verida.io:5001
 VUE_APP_VAULT_CONTEXT_NAME=Verida: Vault
-VUE_APP_CONTEXT_NAME=Verida:Account Explorer
-VUE_APP_LOGO_URL="https://assets.verida.io/verida_login_request_logo_170x170.png"
-VUE_APP_LOGIN_TEXT=Verida Network
-
+VUE_APP_VERIDA_CONTEXT_NAME=Verida:Account Explorer
+VUE_APP_VERIDA_LOGO_URL="https://assets.verida.io/verida_login_request_logo_170x170.png"
+VUE_APP_VERDIA_LOGIN_TEXT=Verida Network
 VUE_APP_BASE_URL=https://verida.network
+VUE_APP_VERIDA_TESTNET_DEFAULT_DID_SERVER=https://dids.testnet.verida.io:5001
