fix:added prettier format scripts - Formatted code - removed duplicate line of code in main.ts

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 		"serve": "vue-cli-service serve  --mode sample",
 		"build": "vue-cli-service build  --mode sample",
 		"test:unit": "vue-cli-service test:unit",
-		"lint": "vue-cli-service lint"
+		"lint": "vue-cli-service lint",
+		"format:check": "npx prettier src/ --check",
+    "format": "npx prettier src/ --write"
 	},
 	"resolutions": {
 		"acorn": "8.0.1"
