--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,10 @@
-# Verida wallet context name. (Required)
+# Verida vault context name. (Required)
 VUE_APP_VAULT_CONTEXT_NAME=Verida: Vault
 
 # Verida app context name. (Required)
 VUE_APP_VERIDA_CONTEXT_NAME=Verida:Account Explorer
 
-# Verida logo url to for the networkk config 
+# Verida logo url to for the network config 
 VUE_APP_VERIDA_LOGO_URL="https://assets.verida.io/verida_login_request_logo_170x170.png"
 
 # Login Text for the @verida/vue-account component (vda-login)
