--- a/.env.sample
+++ b/.env.sample
@@ -2,13 +2,10 @@
 VUE_APP_VAULT_CONTEXT_NAME=Verida: Vault
 
 # Verida app context name. (Required)
-VUE_APP_VERIDA_CONTEXT_NAME=Verida:Account Explorer
+VUE_APP_VERIDA_CONTEXT_NAME=Verida: Network 
 
 # Verida logo url to for the network config 
 VUE_APP_VERIDA_LOGO_URL="https://assets.verida.io/verida_login_request_logo_170x170.png"
 
-# Login Text for the @verida/vue-account component (vda-login)
-VUE_APP_VERDIA_LOGIN_TEXT=Verida Network
-
-# Verida did default server for testnet. (Required)
-VUE_APP_VERIDA_TESTNET_DEFAULT_DID_SERVER=https://dids.testnet.verida.io:5001
+# Verida did  server URL default is testnet (https://dids.testnet.verida.io:5001). (Required)
+VUE_APP_VERIDA_DID_SERVER=https://dids.testnet.verida.io:5001
