--- a/.env.sample
+++ b/.env.sample
@@ -2,10 +2,13 @@
 VUE_APP_VAULT_CONTEXT_NAME=Verida: Vault
 
 # Verida app context name. (Required)
-VUE_APP_VERIDA_CONTEXT_NAME=Verida: Network 
+VUE_APP_VERIDA_CONTEXT_NAME=Verida: Network Explorer
 
 # Verida logo url to for the network config 
 VUE_APP_VERIDA_LOGO_URL="https://assets.verida.io/verida_login_request_logo_170x170.png"
 
 # Verida did  server URL default is testnet (https://dids.testnet.verida.io:5001). (Required)
 VUE_APP_VERIDA_DID_SERVER=https://dids.testnet.verida.io:5001
+
+# Login button label for the @verida/vue-account component (vda-login) Required.
+VUE_APP_VERDIA_LOGIN_TEXT=Connect with Verida Network
