--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
 		"acorn": "8.0.1"
 	},
 	"dependencies": {
-		"@verida/account-web-vault": "^2.1.0",
-		"@verida/client-ts": "^2.1.0",
-		"@verida/types": "^2.0.5",
-		"@verida/verifiable-credentials": "^2.1.0",
+		"@verida/account-web-vault": "^2.1.1",
+		"@verida/client-ts": "^2.1.2",
+		"@verida/helpers": "^2.1.1",
+		"@verida/types": "^2.1.1",
+		"@verida/verifiable-credentials": "^2.1.2",
 		"@verida/vue-account": "^0.1.38",
 		"@verida/vue-credentials-view": "^0.1.3",
 		"buffer": "^6.0.3",
