--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 		"@verida/vue-account": "^0.1.38",
 		"@verida/vue-credentials-view": "^0.1.3",
 		"buffer": "^6.0.3",
-		"core-js": "^3.21.0",
+		"chart.js": "3.9.1",
+		"core-js": "^3.31.0",
+		"d3": "^7.8.5",
 		"dayjs": "^1.11.0",
 		"qrcode.vue": "^3.3.3",
 		"vee-validate": "^4.5.7",
@@ -35,6 +37,7 @@
 		"yup": "^0.32.11"
 	},
 	"devDependencies": {
+		"@types/d3": "^7.4.0",
 		"@types/events": "^3.0.0",
 		"@types/jest": "^27.4.0",
 		"@types/node": "^17.0.21",
