--- a/.env.sample
+++ b/.env.sample
@@ -2,7 +2,7 @@
 VUE_APP_VAULT_CONTEXT_NAME=Verida: Vault
 
 # Verida app context name. (Required)
-VUE_APP_VERIDA_CONTEXT_NAME=Verida:Account Explorer
+VUE_APP_VERIDA_CONTEXT_NAME=Verida:Network Explorer
 
 # Verida logo url to for the network config 
 VUE_APP_VERIDA_LOGO_URL="https://assets.verida.io/verida_login_request_logo_170x170.png"
