--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"core-js": "^3.31.0",
 		"d3": "^7.8.5",
 		"dayjs": "^1.11.0",
+		"lodash": "^4.17.21",
 		"qrcode.vue": "^3.3.3",
 		"vee-validate": "^4.5.7",
 		"vue": "^3.0.0",
@@ -40,6 +41,7 @@
 		"@types/d3": "^7.4.0",
 		"@types/events": "^3.0.0",
 		"@types/jest": "^27.4.0",
+		"@types/lodash": "^4.14.195",
 		"@types/node": "^17.0.21",
 		"@typescript-eslint/eslint-plugin": "^4.18.0",
 		"@typescript-eslint/parser": "^4.18.0",
