--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"vue-router": "^4.0.0-0",
 		"vue-spinner": "^1.0.4",
 		"vue-toast-notification": "^3.0.0",
+		"vue3-table-lite": "^1.3.7",
 		"vuex": "^4.0.0-0",
 		"yup": "^0.32.11"
 	},
