--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
 		"acorn": "8.0.1"
 	},
 	"dependencies": {
-		"@verida/account-web-vault": "^2.3.5",
-		"@verida/client-ts": "^2.3.5",
+		"@verida/account-web-vault": "^2.3.6",
+		"@verida/client-ts": "^2.3.6",
 		"@verida/helpers": "^2.3.1",
 		"@verida/types": "^2.3.1",
-		"@verida/verifiable-credentials": "^2.3.5",
+		"@verida/vda-did-resolver": "^2.3.6",
+		"@verida/verifiable-credentials": "^2.3.6",
 		"@verida/vue-account": "^0.1.38",
 		"@verida/vue-credentials-view": "^0.1.3",
 		"buffer": "^6.0.3",
