--- a/.env.sample
+++ b/.env.sample
@@ -1,14 +1,23 @@
 # Verida vault context name. (Required)
-VUE_APP_VAULT_CONTEXT_NAME=Verida: Vault
+VUE_APP_VAULT_CONTEXT_NAME="Verida: Vault"
 
 # Verida app context name. (Required)
-VUE_APP_VERIDA_CONTEXT_NAME=Verida:Network Explorer
+VUE_APP_VERIDA_CONTEXT_NAME="Verida:Network Explorer"
 
 # Verida logo url to for the network config 
 VUE_APP_VERIDA_LOGO_URL="https://assets.verida.io/verida_login_request_logo_170x170.png"
 
-# Login Text for the @verida/vue-account component (vda-login)
-VUE_APP_VERDIA_LOGIN_TEXT=Verida Network
+# Data source for sumary of nodes
+VUE_APP_NODE_SUMMARY_URL="https://assets.verida.io/metrics/nodes/testnet-nodes-summary.json"
 
-# Verida did default server for testnet. (Required)
-VUE_APP_VERIDA_TESTNET_DEFAULT_DID_SERVER=https://dids.testnet.verida.io:5001
+# Data source for network stats
+VUE_APP_NETWORK_STATUS_URL="https://assets.verida.io/metrics/network/testnet/stats.csv"
+
+# Verida environment being used
+VUE_APP_VERIDA_ENV="testnet"
+
+# URL for the mainnet explorer
+VUE_APP_EXPLORER_URL_MAINNET="https://explorer.verida.network/"
+
+# URL for the testnet explorer
+VUE_APP_EXPLORER_URL_TESTNET="https://explorer.testnet.verida.network/"
