--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
 		"acorn": "8.0.1"
 	},
 	"dependencies": {
-		"@verida/account-web-vault": "^2.4.0-rc3",
-		"@verida/client-ts": "^2.4.0-rc4",
-		"@verida/helpers": "^2.4.0-rc2",
-		"@verida/types": "^2.4.0-rc1",
-		"@verida/verifiable-credentials": "^2.3.5",
+		"@verida/account-web-vault": "^3.0.0",
+		"@verida/client-ts": "^3.0.0",
+		"@verida/helpers": "^3.0.0",
+		"@verida/types": "^3.0.0",
+		"@verida/verifiable-credentials": "^3.0.0",
 		"@verida/vue-account": "^0.1.38",
 		"@verida/vue-credentials-view": "^0.1.3",
 		"buffer": "^6.0.3",
