feat: add RPC env var in Verida config

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Polygon RPC URL (Optional)
+VUE_APP_POLYGON_RPC_URL=
+
 # Verida vault context name. (Required)
 VUE_APP_VAULT_CONTEXT_NAME=Verida: Vault
 
